--- a/src/css/scss/04-elements/_elements.scss
+++ b/src/css/scss/04-elements/_elements.scss
@@ -23,10 +23,19 @@ h7 {
   font-weight: bold;
 }
 
+header {
+  @include flexbox(row);
+  @include flex(flex-end, center);
+  padding: 0.5rem 1rem;
+  background: $color-primary;
+  height: 10%;
+}
+
 main {
   @include flexbox(column);
   @include flex(center, center);
   height: 85%;
+  width: 100%;
   background: $color-secondary;
 }
 
@@ -39,14 +48,6 @@ section {
   background: $color-quinary;
   font-size: 1.5rem;
   width: auto;
-}
-
-header {
-  @include flexbox(row);
-  @include flex(flex-end, center);
-  padding: 0.5rem 1rem;
-  background: $color-primary;
-  height: 10%;
 }
 
 footer {
