Add article element with padding

--- a/src/css/scss/04-elements/_elements.scss
+++ b/src/css/scss/04-elements/_elements.scss
@@ -50,6 +50,10 @@ section {
   width: auto;
 }
 
+article {
+  padding: 2rem;
+}
+
 footer {
   @include flexbox(row);
   @include flex(center, space-around);
