Add flex properties to footer info

--- a/src/css/scss/05-objects/_objects.scss
+++ b/src/css/scss/05-objects/_objects.scss
@@ -13,3 +13,9 @@
   padding: 0.2rem 0.2rem;
   background: $color-primary;
 }
+
+.overlook-info {
+  @include flexbox(row);
+  @include flex(space-around, space-around, wrap);
+  width: 100%;
+}
