Fix bug where bottom of screen was white

--- a/src/css/scss/03-generics/_generic.scss
+++ b/src/css/scss/03-generics/_generic.scss
@@ -16,6 +16,15 @@ body {
   text-transform: capitalize;
 }
 
+main {
+  height: 80%;
+}
+
+header,
+footer {
+  height: 10%;
+}
+
 ol,
 ul {
   list-style: none;
